libtool: Autospec creation for update from version 2.4.6 to version 2.4.7
Alex Ameen (11):
      libtool: replace some references to /usr/bin/file and /bin/sh
      * libtool: Bump M4 serial versions and add missing AC_PROG_SED to ltdl.m4
      tests: remove deprecated old-ltdl-iface.at test.
      docs: manually recording dependencies in Automake
      maint: update copyrights across project.
      gnulib: update submodule to new repository.
      libtool: correct linter syntax complaints in M4
      libltdl: bump libltdl.la version-info.
      NEWS: fill entries for past commits
      NEWS: roll-back manually filled NEWS versioning
      version 2.4.7

Alex Potapenko (1):
      libtool: Pass -Xassembler flag and arguments to compiler

Alexander Shevchenko (1):
      libtool: add icl.exe support

Bert Wesarg (1):
      libtool: exit verbosely for fatal configure problems

David Edelsohn (1):
      m4/libtool.m4: export AIX TLS symbols

Gary V. Vaughan (2):
      maint: post-release administrivia
      maint: demote myself from maintainer to former maintainer.

Jeremy Huddleston Sequoia (2):
      libtool: fix GCC/clang linking with -fsanitize=*
      libtool: support macOS 11

KO Myung-Hun (1):
      libtool: set file_list_spec to '@' on OS/2

Lucas Holt (1):
      libtool: add support for MidnightBSD

Mike Frysinger (2):
      libtoolize: exec automake and autoconf only with --help
      libtool: pass through -fuse-ld flags

Pavel Raiskup (36):
      libtool: fix GCC linking with -specs=*
      bootstrap: fix race in temporary Makefile
      libtoolize: fix infinite recursion in m4
      gnulib: sync with upstream
      maint: put newline after 'Subjecŧ' in ChangeLog
      libool.m4: add ARFLAGS variable
      ARFLAGS: use 'cr' instead of 'cru' by default
      maint: relax 'sc_prohibit_test_dollar' check
      gnulib: sync with upstream
      libtool: mitigate the $sed_quote_subst slowdown
      libtool: optimizing options-parser hooks
      funclib: refactor quo

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,55 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
+* Noteworthy changes in release 2.4.7 (2022-03-16) [stable]
+
+** New features:
+
+  - Libtool script now supports (configure-time and runtime) ARFLAGS
+    variable, which obsoletes AR_FLAGS.  This is due to naming conventions
+    among other *FLAGS and to be consistent with Automake's ARFLAGS.
+
+  - Gnulib testsuite is enabled and run during 'make check'.
+
+  - Support the Windows version of the Intel C Compiler (icl) in
+    libtool script.
+
+  - Pass '-fsanitize=*' flags for GCC and LLVM, and '-specs=*' for GCC
+    to linker.
+
+  - Pass '-Xassembler=*' and '-Wa,*' flag to compilers and linkers.
+
+  - The variable 'FILECMD' with default value of '/usr/bin/file' was used to
+    replace existing hard coded references to '/usr/bin/file'.
+
+  - Add MidnightBSD support.
+
+** Important incompatible changes:
+
+  - Libtool changed ARFLAGS/AR_FLAGS default from 'cru' to 'cr'.
+
+  - Do not pass '-pthread' to Solaris linker.
+
+  - 'libtool' and 'libtoolize' scripts now use '#! /usr/bin/env sh' shebang.
+    Previously '#! /bin/sh' was used, which presents challenges for
+    containerized environments.
+
+** Bug fixes:
+
+  - Fix significant slowdown of libtoolize for certain projects (regression
+    introduced in 2.4.3 release) caused by infinite m4 macro recursion.
+
+  - Mitigate the slowdown of libtool script (introduced in v2.4.3) caused by
+    increased number of calls to '$SED $sed_quote_subst' (bug#20006).
+
+  - Properly parse and export TLS symbols on AIX.
+
+  - Various bug fixes surrounding use of 'sed'.
+
+  - Darwin systems set proper "allow undefined" flag on OSX 11, and
+    PowerPC 10.5.
+
+  - Removed some deprecated tests related to 'Makefile.inc' files.
+
 * Noteworthy changes in release 2.4.6 (2015-02-15) [stable]
 
 ** New features:
@@ -1190,9 +1240,10 @@ New in 0.1:
 * First release of libtool
 * Support for: *-*-freebsd*, *-*-netbsd*, *-*-sunos4*, *-*-ultrix4*
 -- 
-  Copyright (C) 1996, 1998-2015 Free Software Foundation, Inc.
 
-  This file is part of GNU Libtool.
+Copyright (C) 1996, 1998-2019, 2021-2022 Free Software Foundation, Inc.
+
+This file is part of GNU Libtool.
 
 Copying and distribution of this file, with or without modification,
 are permitted in any medium without royalty provided the copyright
